k8s-cluster/whereami.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: v1
kind: Namespace
metadata:
  name: whereami
  labels:
    app: whereami
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whereami
  name: whereami
  namespace: whereami
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http # adding for Istio
  type: ClusterIP
  selector:
    app: whereami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-whereami
  namespace: whereami
spec:
  rules:
  - host: whereami.XXXXX.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whereami
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whereami
  name: whereami
  namespace: whereami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
        version: v1
    spec:
      serviceAccountName: whereami
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: whereami
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.22
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "100m"
        ports:
          - name: http
            containerPort: 8080
        livenessProbe:
          httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
---
